Main css root page

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -1,2 +1,6 @@
 text.springmvc= Welkom op deze spring-site!
 text.hallodaar= test
+text.aanmelden = Aanmelden
+text.gebruikersnaam = Gebruikersnaam
+text.wachtwoord = Wachtwoord
+text.wachtwoordreset_link= Wachtwoord vergeten?
