--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -3,4 +3,11 @@ text.hallodaar= test
 text.aanmelden = Aanmelden
 text.gebruikersnaam = Gebruikersnaam
 text.wachtwoord = Wachtwoord
+text.naam = Naam
+text.mail = Mail-adres
+text.geboortedatum = Geboortedatum
+text.profielfoto = Link naar profielfoto
+text.wachtwoordherhalen = Wachtwoord herhalen
 text.wachtwoordreset_link= Wachtwoord vergeten?
+text.maakaccount = Maak een account
+text.registreren = Registreer
