--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -5,7 +5,7 @@ text.gebruikersnaam = Gebruikersnaam
 text.wachtwoord = Wachtwoord
 text.naam = Naam
 text.mail = Mail-adres
-text.geboortedatum = Geboortedatum
+text.geboortedatum = Geboortedatum (jjjj-mm-dd)
 text.profielfoto = Link naar profielfoto
 text.wachtwoordherhalen = Wachtwoord herhalen
 text.wachtwoordreset_link= Wachtwoord vergeten?
