Main styling, register page (forms in general)

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -1,5 +1,3 @@
-text.springmvc= Welkom op deze spring-site!
-text.hallodaar= test
 text.aanmelden = Aanmelden
 text.gebruikersnaam = Gebruikersnaam
 text.wachtwoord = Wachtwoord
@@ -9,5 +7,5 @@ text.geboortedatum = Geboortedatum (jjjj-mm-dd)
 text.profielfoto = Link naar profielfoto
 text.wachtwoordherhalen = Wachtwoord herhalen
 text.wachtwoordreset_link= Wachtwoord vergeten?
-text.maakaccount = Maak een account
+text.maakaccount = Maak een nieuwe account
 text.registreren = Registreer
