addtrip.jsp, trip.jsp, wijzigingen Trip model, service & controller, wijzgingen nl properties + homecontroller
rest volgt nog :)

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -9,3 +9,14 @@ text.wachtwoordherhalen = Wachtwoord herhalen
 text.wachtwoordreset_link= Wachtwoord vergeten?
 text.maakaccount = Maak een nieuwe account
 text.registreren = Registreer
+text.title = Titel
+text.titleTooltip = Gelieve uw trip een titel te geven.
+text.description = Omschrijving
+text.descriptionTooltip = Korte beschrijving van de trip.
+text.date = Datum
+text.available = Op uitnodiging
+text.availableTooltip = Er kan enkel op uitnodiging aan de trip deelgenomen worden. Deze zijn verborgen in de zoeklijsten.
+text.startdate = Datum
+text.enddate = Einddatum
+text.startdateTooltip = Geef een datum in voor trips op een vast tijdstip of een startdatum voor een bepaalde periode.
+text.enddateTooltip = Geef een datum voor een tijdstip aan te geven tot wanneer een trip kan uitgevoerd worden.
