Error pages + error config + profile page

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -9,3 +9,9 @@ text.wachtwoordherhalen = Wachtwoord herhalen
 text.wachtwoordreset_link= Wachtwoord vergeten?
 text.maakaccount = Maak een nieuwe account
 text.registreren = Registreer
+text.bekijkprofiel = Bekijk profiel
+text.error= Wel, dit is genânt...
+text.invaliduser = Deze gebruiker kan niet worden teruggevonden in het systeem.
+text.pagenotfound = De gevraagde pagina bestaat helaas niet. Controleer de url aub.
+text.internalsystemerror= De pagina kon niet weergegeven worden door een misconfiguratie aan onze kant. We lossen het zo snel mogelijk op!
+text.spijt = Het spijt ons, maar we konden jouw aanvraag niet verwerken. De foutboodschap is als volgt:
