Eerste styling trip-view (/trip/view)

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -15,3 +15,4 @@ text.invaliduser = Deze gebruiker kan niet worden teruggevonden in het systeem.
 text.pagenotfound = De gevraagde pagina bestaat helaas niet. Controleer de url aub.
 text.internalsystemerror= De pagina kon niet weergegeven worden door een misconfiguratie aan onze kant. We lossen het zo snel mogelijk op!
 text.spijt = Het spijt ons, maar we konden jouw aanvraag niet verwerken. De foutboodschap is als volgt:
+text.bekijktripinfo = Trip-info bekijken
