addtrip.jsp, trip.jsp, wijzigingen Trip model, service & controller, wijzgingen nl properties + homecontroller
rest volgt nog :)

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -16,3 +16,13 @@ text.pagenotfound = De gevraagde pagina bestaat helaas niet. Controleer de url a
 text.internalsystemerror= De pagina kon niet weergegeven worden door een misconfiguratie aan onze kant. We lossen het zo snel mogelijk op!
 text.spijt = Het spijt ons, maar we konden jouw aanvraag niet verwerken. De foutboodschap is als volgt:
 text.bekijktripinfo = Trip-info bekijken
+text.title = Titel
+text.available = Publiek
+text.description = Omschrijving
+text.startdate = Startdatum
+text.enddate = Enddate
+text.titleTooltip = Naam van de trip.
+text.availableTooltip = Enkel op uitnodiging.
+text.descriptionTooltip = Korte omschrijving van de trip.
+text.startdateTooltip = Datum van de trip/Startdatum van de periode waarin deze trip kan uitgevoerd worden.
+text.enddateTooltip = Einddatum voor een periode waarin de trip kan uitgevoerd worden.
