aanpassingen: Homecontroller, RestTripController, nl properties, addtrip.jsp

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -26,3 +26,4 @@ text.availableTooltip = Enkel op uitnodiging.
 text.descriptionTooltip = Korte omschrijving van de trip.
 text.startdateTooltip = Datum van de trip/Startdatum van de periode waarin deze trip kan uitgevoerd worden.
 text.enddateTooltip = Einddatum voor een periode waarin de trip kan uitgevoerd worden.
+text.save = Opslaan
