--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -27,3 +27,5 @@ text.descriptionTooltip = Korte omschrijving van de trip.
 text.startdateTooltip = Datum van de trip/Startdatum van de periode waarin deze trip kan uitgevoerd worden.
 text.enddateTooltip = Einddatum voor een periode waarin de trip kan uitgevoerd worden.
 text.save = Opslaan
+text.resetpasswordtimeerror = Tijd om het paswoord te resetten is overschreden. Gelieve dit opnieuw aan te vragen.
+text.resetpassword = Reset paswoord
