--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -10,6 +10,7 @@ text.wachtwoordreset_link= Wachtwoord vergeten?
 text.maakaccount = Maak een nieuwe account
 text.registreren = Registreer
 text.bekijkprofiel = Bekijk profiel
+text.mijnprofiel = Mijn profiel
 text.error= Wel, dit is genânt...
 text.invaliduser = Deze gebruiker kan niet worden teruggevonden in het systeem.
 text.pagenotfound = De gevraagde pagina bestaat helaas niet. Controleer de url aub.
