--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -28,4 +28,5 @@ text.startdateTooltip = Datum van de trip/Startdatum van de periode waarin deze 
 text.enddateTooltip = Einddatum voor een periode waarin de trip kan uitgevoerd worden.
 text.save = Opslaan
 text.resetpasswordtimeerror = Tijd om het paswoord te resetten is overschreden. Gelieve dit opnieuw aan te vragen.
+text.resetstringnotfound = Vier, oh vier!
 text.resetpassword = Reset paswoord
