--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -29,3 +29,4 @@ text.enddateTooltip = Einddatum voor een periode waarin de trip kan uitgevoerd w
 text.save = Opslaan
 text.resetpasswordtimeerror = Tijd om het paswoord te resetten is overschreden. Gelieve dit opnieuw aan te vragen.
 text.resetpassword = Reset paswoord
+text.mijnprofiel = Mijn profiel
