--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -30,3 +30,5 @@ text.save = Opslaan
 text.resetpasswordtimeerror = Tijd om het paswoord te resetten is overschreden. Gelieve dit opnieuw aan te vragen.
 text.resetpassword = Reset paswoord
 text.myprofile = Mijn profiel
+text.createtrip = Maak een trip aan
+text.repeatabletrip = Kan je trip meerdere keren uitgevoerd worden?
