fix resource file

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -1,35 +1,37 @@
-text.aanmelden = Aanmelden
-text.gebruikersnaam = Gebruikersnaam
-text.wachtwoord = Wachtwoord
-text.naam = Naam
-text.mail = Mail-adres
-text.geboortedatum = Geboortedatum (jjjj-mm-dd)
-text.profielfoto = Link naar profielfoto
-text.wachtwoordherhalen = Wachtwoord herhalen
-text.wachtwoordreset_link= Wachtwoord vergeten?
-text.maakaccount = Maak een nieuwe account
-text.registreren = Registreer
-text.bekijkprofiel = Bekijk profiel
-text.error= Wel, dit is genânt...
+text.login = Aanmelden
+text.username = Gebruikersnaam
+text.password = Wachtwoord
+text.name = Naam
+text.mail = E-mailadres
+text.dateofbirth = Geboortedatum (jjjj-mm-dd)
+text.profilepicture = Link naar profielfoto
+text.repeatpassword = Wachtwoord herhalen
+text.resetpasswordlink= Wachtwoord vergeten?
+text.createaccount = Maak een nieuwe account
+text.register = Registreer
+text.viewprofile = Bekijk profiel
+text.error= Wel, dit is gen\u00e2nt...
 text.invaliduser = Deze gebruiker kan niet worden teruggevonden in het systeem.
 text.pagenotfound = De gevraagde pagina bestaat helaas niet. Controleer de url aub.
 text.internalsystemerror= De pagina kon niet weergegeven worden door een misconfiguratie aan onze kant. We lossen het zo snel mogelijk op!
-text.spijt = Het spijt ons, maar we konden jouw aanvraag niet verwerken. De foutboodschap is als volgt:
-text.bekijktripinfo = Trip-info bekijken
+text.sorry = Het spijt ons, maar we konden jouw aanvraag niet verwerken. De foutboodschap is als volgt:
+text.viewtripinformation = Trip-info bekijken
 text.title = Titel
 text.available = Publiek
 text.description = Omschrijving
 text.startdate = Startdatum
 text.enddate = Enddate
-text.titleTooltip = Naam van de trip.
-text.availableTooltip = Enkel op uitnodiging.
-text.descriptionTooltip = Korte omschrijving van de trip.
-text.startdateTooltip = Datum van de trip/Startdatum van de periode waarin deze trip kan uitgevoerd worden.
-text.enddateTooltip = Einddatum voor een periode waarin de trip kan uitgevoerd worden.
+text.titletooltip = Naam van de trip.
+text.availabletooltip = Enkel op uitnodiging.
+text.descriptiontooltip = Korte omschrijving van de trip.
+text.startdatetooltip = Datum van de trip/Startdatum van de periode waarin deze trip kan uitgevoerd worden.
+text.enddatetooltip = Einddatum voor een periode waarin de trip kan uitgevoerd worden.
 text.save = Opslaan
+text.edit = Aanpassen
+text.cancel = Annuleren
 text.resetpasswordtimeerror = Tijd om het paswoord te resetten is overschreden. Gelieve dit opnieuw aan te vragen.
 text.resetpassword = Reset paswoord
 text.myprofile = Mijn profiel
 text.createtrip = Maak een trip aan
 text.repeatabletrip = Kan je trip meerdere keren uitgevoerd worden?
-text.tripInstance = Trip-instantie plannen
+text.tripinstance = Trip-instantie plannen
