--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -2,6 +2,7 @@ text.login = Aanmelden
 text.username = Gebruikersnaam
 text.password = Wachtwoord
 text.name = Naam
+text.type = Type
 text.mail = E-mailadres
 text.dateofbirth = Geboortedatum (jjjj-mm-dd)
 text.profilepicture = Link naar profielfoto
@@ -35,3 +36,8 @@ text.myprofile = Mijn profiel
 text.createtrip = Maak een trip aan
 text.repeatabletrip = Kan je trip meerdere keren uitgevoerd worden?
 text.tripinstance = Trip-instantie plannen
+text.interactive = Interactief
+text.informative = Informatief
+text.addstop = Voeg een nieuwe stop toe
+text.rending = Weergave
+text.normal = Normaal
