Trip + TripRequirements (add)

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -25,11 +25,13 @@ text.enddate = Enddate
 text.titletooltip = Naam van de trip.
 text.availabletooltip = Enkel op uitnodiging.
 text.descriptiontooltip = Korte omschrijving van de trip.
+text.requirementdescription = Beschrijving van een benodigdheid.
 text.startdatetooltip = Datum van de trip/Startdatum van de periode waarin deze trip kan uitgevoerd worden.
 text.enddatetooltip = Einddatum voor een periode waarin de trip kan uitgevoerd worden.
 text.save = Opslaan
 text.edit = Aanpassen
 text.cancel = Annuleren
+text.finishediting = Klaar met toevoegen
 text.resetpasswordtimeerror = Tijd om het paswoord te resetten is overschreden. Gelieve dit opnieuw aan te vragen.
 text.resetpassword = Reset paswoord
 text.myprofile = Mijn profiel
