Reset Password (links)

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -33,6 +33,7 @@ text.edit = Aanpassen
 text.cancel = Annuleren
 text.finishediting = Klaar met toevoegen
 text.resetpasswordtimeerror = Tijd om het paswoord te resetten is overschreden. Gelieve dit opnieuw aan te vragen.
+text.resetstringnotfound = Deze resetlink is ongeldig.
 text.resetpassword = Reset paswoord
 text.myprofile = Mijn profiel
 text.createtrip = Maak een trip aan
