Models (ivm Trip & TripInstance) aangepast wel nog wat fouten --> test fails

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -25,7 +25,7 @@ text.enddate = Enddate
 text.titletooltip = Naam van de trip.
 text.availabletooltip = Enkel op uitnodiging.
 text.descriptiontooltip = Korte omschrijving van de trip.
-text.requirementdescription = Beschrijving van een benodigdheid.
+text.requirementdescription = Een korte beschrijving van de benodigdheid.
 text.startdatetooltip = Datum van de trip/Startdatum van de periode waarin deze trip kan uitgevoerd worden.
 text.enddatetooltip = Einddatum voor een periode waarin de trip kan uitgevoerd worden.
 text.save = Opslaan
@@ -44,3 +44,6 @@ text.informative = Informatief
 text.addstop = Voeg een nieuwe stop toe
 text.rending = Weergave
 text.normal = Normaal
+text.amount = Aantal
+text.requirementname = Naam van de benodigdheid
+text.requirementamount = Hoeveel je van deze benodigdheid nodig hebt voor de trip
