--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -47,3 +47,5 @@ text.normal = Normaal
 text.amount = Aantal
 text.requirementname = Naam van de benodigdheid
 text.requirementamount = Hoeveel je van deze benodigdheid nodig hebt voor de trip
+text.addtrip = Voeg een nieuwe trip toe
+text.notripsfound = Geen trips gevonden
