--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -28,9 +28,11 @@ text.descriptiontooltip = Korte omschrijving van de trip.
 text.requirementdescription = Een korte beschrijving van de benodigdheid.
 text.startdatetooltip = Datum van de trip/Startdatum van de periode waarin deze trip kan uitgevoerd worden.
 text.enddatetooltip = Einddatum voor een periode waarin de trip kan uitgevoerd worden.
+text.add = Toevoegen
 text.save = Opslaan
 text.edit = Aanpassen
 text.cancel = Annuleren
+text.detail = detail
 text.finishediting = Klaar met toevoegen
 text.resetpasswordtimeerror = Tijd om het paswoord te resetten is overschreden. Gelieve dit opnieuw aan te vragen.
 text.resetstringnotfound = Deze resetlink is ongeldig.
@@ -48,4 +50,5 @@ text.amount = Aantal
 text.requirementname = Naam van de benodigdheid
 text.requirementamount = Hoeveel je van deze benodigdheid nodig hebt voor de trip
 text.addtrip = Voeg een nieuwe trip toe
+text.trips = Trips
 text.notripsfound = Geen trips gevonden
