JQuery functies, addstop.jsp Stop: latitude + longtitude velden ipv Location

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -52,3 +52,5 @@ text.requirementamount = Hoeveel je van deze benodigdheid nodig hebt voor de tri
 text.addtrip = Voeg een nieuwe trip toe
 text.trips = Trips
 text.notripsfound = Geen trips gevonden
+text.trip= Trip
+text.nostopsfound = Geen stopplaatsen beschikbaar
