--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -54,3 +54,5 @@ text.trips = Trips
 text.notripsfound = Geen trips gevonden
 text.trip= Trip
 text.nostopsfound = Geen stopplaatsen beschikbaar
+text.longitude = Longitude
+text.latitude = Latitude
