--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -56,3 +56,4 @@ text.trip= Trip
 text.nostopsfound = Geen stopplaatsen beschikbaar
 text.longitude = Longitude
 text.latitude = Latitude
+text.order = Volgorde
