algemene navigatie tussen add/edit trip, trip lijst en addstop

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -57,3 +57,6 @@ text.nostopsfound = Geen stopplaatsen beschikbaar
 text.longitude = Longitude
 text.latitude = Latitude
 text.order = Volgorde
+text.newstop = Stopplaats toevoegen
+text.edittrip = Stopplaats aanpassen
+text.ar = Augmented Reality
