Added Trip view

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -60,3 +60,5 @@ text.order = Volgorde
 text.newstop = Stopplaats toevoegen
 text.edittrip = Stopplaats aanpassen
 text.ar = Augmented Reality
+text.instances = Instances
+text.stops = Stops
