Stopplaats aanpassen + gerelateerde wijzigingen in view/JS functions en TripController

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -62,3 +62,4 @@ text.edittrip = Stopplaats aanpassen
 text.ar = Augmented Reality
 text.instances = Instances
 text.stops = Stops
+text.notripinstancesfound = Geen trip instanties gevonden
