Trip view: lijst requirements erbij gezet met toevoegen knop.

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -62,4 +62,6 @@ text.edittrip = Stopplaats aanpassen
 text.ar = Augmented Reality
 text.instances = Instances
 text.stops = Stops
-text.notripinstancesfound = Geen trip instanties gevonden
+text.notripinstancesfound = De trip heeft nog geen instanties.
+text.norequirementsfound = De trip heeft geen benodigdheden.
+text.requirements = Benodigdheden
