Trip-list available

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -65,3 +65,9 @@ text.stops = Stops
 text.notripinstancesfound = De trip heeft nog geen instanties.
 text.norequirementsfound = De trip heeft geen benodigdheden.
 text.requirements = Benodigdheden
+text.jointrip = Neem deel aan deze trip
+text.tripname = Naam van de trip
+text.tripdescription = Beschrijving van de trip
+text.tripstartdate = Startdatum van de trip
+text.tripenddate = Einddatum van de trip
+text.tripnumberofparticipants = Aantal deelnemers
