List of trips on profile page added

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -71,3 +71,4 @@ text.tripdescription = Beschrijving van de trip
 text.tripstartdate = Startdatum van de trip
 text.tripenddate = Einddatum van de trip
 text.tripnumberofparticipants = Aantal deelnemers
+text.tripsparticipated = Uitgevoerde en geplande trips
