TripInstance + aanpassingen in DateUtil & Stop

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -26,8 +26,6 @@ text.titletooltip = Naam van de trip.
 text.availabletooltip = Enkel op uitnodiging.
 text.descriptiontooltip = Korte omschrijving van de trip.
 text.requirementdescription = Een korte beschrijving van de benodigdheid.
-text.startdatetooltip = Datum van de trip/Startdatum van de periode waarin deze trip kan uitgevoerd worden.
-text.enddatetooltip = Einddatum voor een periode waarin de trip kan uitgevoerd worden.
 text.add = Toevoegen
 text.save = Opslaan
 text.edit = Aanpassen
@@ -60,15 +58,27 @@ text.order = Volgorde
 text.newstop = Stopplaats toevoegen
 text.edittrip = Stopplaats aanpassen
 text.ar = Augmented Reality
+text.createRequirement = Maak een nieuwe benodigdheid aan 
 text.instances = Instances
 text.stops = Stops
 text.notripinstancesfound = De trip heeft nog geen instanties.
 text.norequirementsfound = De trip heeft geen benodigdheden.
 text.requirements = Benodigdheden
-text.jointrip = Neem deel aan deze trip
+
+text.date = datum
+text.instancedate = Op welke dag vindt de trip plaats?
+text.starttime = Starttijd
+text.endtime = Eindtijd
+text.instancestarttime = Wanneer start de trip?
+text.instanceendtime = Wanneer eindigt de trip?
+#text.startdatetooltip = Datum van de trip/Startdatum van de periode waarin deze trip kan uitgevoerd worden.
+#text.enddatetooltip = Einddatum voor een periode waarin de trip kan uitgevoerd worden.text.jointrip = Neem deel aan deze trip
+
 text.tripname = Naam van de trip
 text.tripdescription = Beschrijving van de trip
 text.tripstartdate = Startdatum van de trip
 text.tripenddate = Einddatum van de trip
 text.tripnumberofparticipants = Aantal deelnemers
 text.tripsparticipated = Uitgevoerde en geplande trips
+
+text.jointrip = Deelnemen
