TripInstance + aanpassingen in DateUtil & Stop

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -68,6 +68,7 @@ text.trip= Trip
 text.tripdescription = Beschrijving van de trip
 text.tripenddate = Einddatum van de trip
 text.tripinstance = Trip-instantie plannen
+text.tripinstances = Geplande trips
 text.tripname = Naam van de trip
 text.tripnumberofparticipants = Aantal deelnemers
 text.trips = Trips
@@ -77,4 +78,3 @@ text.type = Type
 text.username = Gebruikersnaam
 text.viewprofile = Bekijk profiel
 text.viewtripinformation = Trip-info bekijken
-
