TripInstance: create view/list (TODO: edit/delete) (cost/message not fully implemented)

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -9,6 +9,7 @@ text.cancel = Annuleren
 text.createaccount = Maak een nieuwe account
 text.createRequirement = Maak een nieuwe benodigdheid aan 
 text.createtrip = Maak een trip aan
+text.costs = Kosten
 text.date = datum
 text.dateofbirth = Geboortedatum (jjjj-mm-dd)
 text.description = Omschrijving
@@ -33,15 +34,20 @@ text.latitude = Latitude
 text.login = Aanmelden
 text.longitude = Longitude
 text.mail = E-mailadres
+text.messages = Berichten
 text.myprofile = Mijn profiel
 text.name = Naam
 text.newstop = Stopplaats toevoegen
 text.norequirementsfound = De trip heeft geen benodigdheden.
 text.normal = Normaal
+text.nocostsfound = Geen kosten toegevoegd
+text.nomessagesfound = Geen berichten geplaatst
+text.noparticipants = Geen deelnemers
 text.nostopsfound = Geen stopplaatsen beschikbaar
 text.notripinstancesfound = De trip heeft nog geen instanties.
 text.notripsfound = Geen trips gevonden
 text.order = Volgorde
+text.participants = Deelnemers
 text.pagenotfound = De gevraagde pagina bestaat helaas niet. Controleer de url aub.
 text.password = Wachtwoord
 text.profilepicture = Link naar profielfoto
@@ -49,6 +55,8 @@ text.register = Registreer
 text.rending = Weergave
 text.repeatabletrip = Kan je trip meerdere keren uitgevoerd worden?
 text.repeatpassword = Wachtwoord herhalen
+text.requirementinstanceforallusers = Iedereen
+text.requirementinstancebrings = Verantwoordelijk
 text.requirementamount = Hoeveel je van deze benodigdheid nodig hebt voor de trip
 text.requirementdescription = Een korte beschrijving van de benodigdheid.
 text.requirementname = Naam van de benodigdheid
@@ -66,14 +74,17 @@ text.title = Titel
 text.titletooltip = Naam van de trip.
 text.trip= Trip
 text.tripdescription = Beschrijving van de trip
-text.tripenddate = Einddatum van de trip
+#text.tripenddate = Einddatum van de trip
 text.tripinstance = Trip-instantie plannen
 text.tripinstances = Geplande trips
 text.tripname = Naam van de trip
 text.tripnumberofparticipants = Aantal deelnemers
 text.trips = Trips
 text.tripsparticipated = Uitgevoerde en geplande trips
-text.tripstartdate = Startdatum van de trip
+#text.tripstartdate = Startdatum van de trip
+text.tripinstancedate = Dag van de trip
+text.tripinstancestarttime = Startuur
+text.tripinstanceendtime = Einduur
 text.type = Type
 text.username = Gebruikersnaam
 text.viewprofile = Bekijk profiel
