Trip (template) list.jsp --> own trips + public trips

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -89,3 +89,7 @@ text.type = Type
 text.username = Gebruikersnaam
 text.viewprofile = Bekijk profiel
 text.viewtripinformation = Trip-info bekijken
+
+text.publictrips = Publieke templates
+text.noowntripsfound = Je hebt nog geen eigen templates gemaakt
+text.owntrips = Eigen templates
