Trip + TripInstance edit instance

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -16,8 +16,9 @@ text.description = Omschrijving
 text.descriptiontooltip = Korte omschrijving van de trip.
 text.detail = detail
 text.edit = Aanpassen
-text.edittrip = Stopplaats aanpassen
-text.enddate = Enddate
+#text.editstop = Stopplaats aanpassen
+text.edittrip = Trip aanpassen
+#text.enddate = Enddate
 text.endtime = Eindtijd
 text.error= Wel, dit is gen\u00e2nt...
 text.finishediting = Klaar met toevoegen
@@ -93,3 +94,5 @@ text.viewtripinformation = Trip-info bekijken
 text.publictrips = Publieke templates
 text.noowntripsfound = Je hebt nog geen eigen templates gemaakt
 text.owntrips = Eigen templates
+text.tripcreator = Deze trip werd gemaakt door
+text.editinstance = Pas deze geplande trip aan
