--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -75,14 +75,14 @@ text.title = Titel
 text.titletooltip = Naam van de trip.
 text.trip= Trip
 text.tripdescription = Beschrijving van de trip
-#text.tripenddate = Einddatum van de trip
+text.tripenddate = Einddatum van de trip
 text.tripinstance = Trip-instantie plannen
 text.tripinstances = Geplande trips
 text.tripname = Naam van de trip
 text.tripnumberofparticipants = Aantal deelnemers
 text.trips = Trips
 text.tripsparticipated = Uitgevoerde en geplande trips
-#text.tripstartdate = Startdatum van de trip
+text.tripstartdate = Startdatum van de trip
 text.tripinstancedate = Dag van de trip
 text.tripinstancestarttime = Startuur
 text.tripinstanceendtime = Einduur
