Add message to trip instance

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -96,3 +96,6 @@ text.noowntripsfound = Je hebt nog geen eigen templates gemaakt
 text.owntrips = Eigen templates
 text.tripcreator = Deze trip werd gemaakt door
 text.editinstance = Pas deze geplande trip aan
+text.addmessage = Plaats een bericht
+text.messagecontent = Schrijf hier je bericht
+text.messagedate = Datum van het bericht
