--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -10,8 +10,8 @@ text.createaccount = Maak een nieuwe account
 text.createRequirement = Maak een nieuwe benodigdheid aan 
 text.createtrip = Maak een trip aan
 text.costs = Kosten
-text.date = datum
-text.dateofbirth = Geboortedatum (jjjj-mm-dd)
+text.date = Datum
+text.dateofbirth = Geboortedatum (dd-mm-jjjj)
 text.description = Omschrijving
 text.descriptiontooltip = Korte omschrijving van de trip.
 text.detail = detail
@@ -95,7 +95,16 @@ text.publictrips = Publieke templates
 text.noowntripsfound = Je hebt nog geen eigen templates gemaakt
 text.owntrips = Eigen templates
 text.tripcreator = Deze trip werd gemaakt door
+text.triporganiser = Organisator
 text.editinstance = Pas deze geplande trip aan
 text.addmessage = Plaats een bericht
 text.messagecontent = Schrijf hier je bericht
 text.messagedate = Datum van het bericht
+text.from = From
+text.to = To
+text.daily = Every day
+text.weekly = Every week
+text.dateuntil = Herhalen tot datum
+text.dateuntiltooltip = Tot welke datum wil je deze trip herhalen?
+text.owntripinstances = Eigen trips
+text.publictripinstances = Publieke trips
