Add Cost Add Message          - To Trip
Fixed FileUtilTest once again

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -108,3 +108,7 @@ text.dateuntil = Herhalen tot datum
 text.dateuntiltooltip = Tot welke datum wil je deze trip herhalen?
 text.owntripinstances = Eigen trips
 text.publictripinstances = Publieke trips
+
+text.addcost = Kost toevoegen
+text.costdescription = Beschrijving
+text.costamount = Bedrag
