Added Modal on viewinstance.jsp Added delete message functionality Made RequirementInstance Comparable

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -108,6 +108,8 @@ text.dateuntil = Herhalen tot datum
 text.dateuntiltooltip = Tot welke datum wil je deze trip herhalen?
 text.owntripinstances = Eigen trips
 text.publictripinstances = Publieke trips
+text.assignrequirementtoparticipant = Benodigdheid toewijzen aan een deelnemer
+text.deletemessage = Verwijderen
 
 text.addcost = Kost toevoegen
 text.costdescription = Beschrijving
