Fixed TripInstanceServiceTest Added delete cost functionality

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -110,6 +110,7 @@ text.owntripinstances = Eigen trips
 text.publictripinstances = Publieke trips
 text.assignrequirementtoparticipant = Benodigdheid toewijzen aan een deelnemer
 text.deletemessage = Verwijderen
+text.deletecost = Verwijderen
 
 text.addcost = Kost toevoegen
 text.costdescription = Beschrijving
