--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -111,6 +111,7 @@ text.publictripinstances = Publieke trips
 text.assignrequirementtoparticipant = Benodigdheid toewijzen aan een deelnemer
 text.deletemessage = Verwijderen
 text.deletecost = Verwijderen
+text.editcost = Aanpassen
 
 text.addcost = Kost toevoegen
 text.costdescription = Beschrijving
