FB Login  + save target url na inloggen (nog niet via FB)

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -116,3 +116,4 @@ text.editcost = Aanpassen
 text.addcost = Kost toevoegen
 text.costdescription = Beschrijving
 text.costamount = Bedrag
+text.invitefriendsfb = Nodig vrienden uit via Facebook
