Hibernate & test aanpassingen Answer & AnswerInstance (AnswerInstanceTest dient nog aangepast te worden)

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -108,11 +108,11 @@ text.dateuntil = Herhalen tot datum
 text.dateuntiltooltip = Tot welke datum wil je deze trip herhalen?
 text.owntripinstances = Eigen trips
 text.publictripinstances = Publieke trips
+text.noaswersfound = Er zijn nog geen antwoorden voor de stopvraag
 text.assignrequirementtoparticipant = Benodigdheid toewijzen aan een deelnemer
 text.deletemessage = Verwijderen
 text.deletecost = Verwijderen
 text.editcost = Aanpassen
-
 text.addcost = Kost toevoegen
 text.costdescription = Beschrijving
 text.costamount = Bedrag
