--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -100,8 +100,9 @@ text.editinstance = Pas deze geplande trip aan
 text.addmessage = Plaats een bericht
 text.messagecontent = Schrijf hier je bericht
 text.messagedate = Datum van het bericht
-text.from = From
-text.to = To
+text.from = Van
+text.to = Tot
+text.time = Tijd
 text.daily = Every day
 text.weekly = Every week
 text.dateuntil = Herhalen tot datum
@@ -117,3 +118,6 @@ text.addcost = Kost toevoegen
 text.costdescription = Beschrijving
 text.costamount = Bedrag
 text.invitefriendsfb = Nodig vrienden uit via Facebook
+
+text.plannedtrips = Geplande trips
+text.pasttrips = Voorbije trips
