Add answer; Logout;

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -118,6 +118,8 @@ text.addcost = Kost toevoegen
 text.costdescription = Beschrijving
 text.costamount = Bedrag
 text.invitefriendsfb = Nodig vrienden uit via Facebook
-
+text.question = Vraagstelling
 text.plannedtrips = Geplande trips
 text.pasttrips = Voorbije trips
+text.visibility = Zichtbaarheid van de stopplaatsen instellen.
+
