Stop model update (radius added) Testen verbeterd

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -122,4 +122,4 @@ text.question = Vraagstelling
 text.plannedtrips = Geplande trips
 text.pasttrips = Voorbije trips
 text.visibility = Zichtbaarheid van de stopplaatsen instellen.
-
+text.radius = Straal
