--- a/TrippieApp/res/values/strings.xml
+++ b/TrippieApp/res/values/strings.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">TrippieApp</string>
+    <string name="trips">Your Trips</string>
+    <string name="chat">Chat</string>
+    <string name="maps">Nearby Trips</string>
 </resources>
