--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -123,3 +123,6 @@ text.plannedtrips = Geplande trips
 text.pasttrips = Voorbije trips
 text.visibility = Zichtbaarheid van de stopplaatsen instellen.
 text.radius = Straal
+ text.dashboard = Mijn dashboard
+text.mydata = Mijn gegevens
+text.mytrips = Mijn trips
