Navigatie homepage, bugfixes JQuery bij editstop.jsp

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -123,6 +123,16 @@ text.plannedtrips = Geplande trips
 text.pasttrips = Voorbije trips
 text.visibility = Zichtbaarheid van de stopplaatsen instellen.
 text.radius = Straal
- text.dashboard = Mijn dashboard
+text.dashboard = Mijn dashboard
 text.mydata = Mijn gegevens
 text.mytrips = Mijn trips
+
+stops.question = Vraagstelling
+stops.visibility = Zichtbaarheid van de stopplaatsen instellen.
+stops.radius = Straal
+stops.latitude = Latitude
+stops.longitude = Longitude
+
+home.participateOnTrip = Deelnamen aan een Trip
+home.organizeTrip = Organizeer een trip
+home.contentTitle = Mijn Trippie Adviseur
