Invite friends for instance by mail + css buttons

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -126,6 +126,11 @@ text.radius = Straal
 text.dashboard = Mijn dashboard
 text.mydata = Mijn gegevens
 text.mytrips = Mijn trips
+invite.bymail = Nodig vrienden uit via e-mail
+invite.receipients = Ontvangers (gescheiden door een komma)
+      invite.doinvite = Uitnodigen
+invite.personalmessage = Persoonlijk bericht
+
 
 stops.question = Vraagstelling
 stops.visibility = Zichtbaarheid van de stopplaatsen instellen.
