Invite friends for instance by mail + css buttons

--- a/TrippieApp/res/values/strings.xml
+++ b/TrippieApp/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="trips">Your Trips</string>
     <string name="chat">Chat</string>
     <string name="maps">Nearby Trips</string>
+    <string name="name">Name</string>
+    <string name="date">Date</string>
+    <string name="startTime">Start Date</string>
+    <string name="endTime">End Date</string>
+    <string name="description">Description</string>
 </resources>
