bugfixes front end

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -138,10 +138,12 @@ stops.visibility = Zichtbaarheid van de stopplaatsen instellen.
 stops.radius = Straal
 stops.latitude = Latitude
 stops.longitude = Longitude
+stops.editstop = Stopplaats aanpassen
 
 home.participateOnTrip = Deelnamen aan een Trip
 home.organizeTrip = Organizeer een trip
 home.contentTitle = Mijn Trippie Adviseur
 
-
 text.mail = ANTICRASHTEXT.MAIL-ALS JE DIT ZIET MOET JE DE TEXT.MAIL IN DEZE PAGINA AANPASSEN NAAR TEXT.EMAIL
+
+trips.repeatabletooltip = Is je trip herhaalbaar op een vast interval?
