--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -16,7 +16,7 @@ text.dateofbirthedit = Geboortedatum (dd-mm-jjjj)
 text.description = Omschrijving
 text.descriptiontooltip = Korte omschrijving van de trip.
 text.detail = detail
-text.edit = Aanpassen
+text.edit =  Aanpassen
 #text.editstop = Stopplaats aanpassen
 text.edittrip = Trip aanpassen
 #text.enddate = Enddate
@@ -131,7 +131,7 @@ invite.bymail = Nodig vrienden uit via e-mail
 invite.receipients = Ontvangers (gescheiden door een komma)
 invite.doinvite = Uitnodigen
 invite.personalmessage = Persoonlijk bericht
-  text.logout = Uitloggen
+text.logout = Uitloggen
 
 stops.question = Vraagstelling
 stops.visibility = Zichtbaarheid van de stopplaatsen instellen.
@@ -147,3 +147,5 @@ home.contentTitle = Mijn Trippie Adviseur
 text.mail = ANTICRASHTEXT.MAIL-ALS JE DIT ZIET MOET JE DE TEXT.MAIL IN DEZE PAGINA AANPASSEN NAAR TEXT.EMAIL
 
 trips.repeatabletooltip = Is je trip herhaalbaar op een vast interval?
+
+error.defaulterror = "merge met da van den tim"
