--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -16,7 +16,7 @@ text.dateofbirthedit = Geboortedatum (dd-mm-jjjj)
 text.description = Omschrijving
 text.descriptiontooltip = Korte omschrijving van de trip.
 text.detail = detail
-text.edit =  Aanpassen
+text.edit = Aanpassen
 #text.editstop = Stopplaats aanpassen
 text.edittrip = Trip aanpassen
 #text.enddate = Enddate
@@ -148,4 +148,12 @@ text.mail = ANTICRASHTEXT.MAIL-ALS JE DIT ZIET MOET JE DE TEXT.MAIL IN DEZE PAGI
 
 trips.repeatabletooltip = Is je trip herhaalbaar op een vast interval?
 
-error.defaulterror = "merge met da van den tim"
+error.defaultError = DANGER DANGER HIGH VOLTAGE
+error.tripNotFound = Triptemplate is niet gevonden
+error.tripInstanceNotFound = Geplande trip is niet gevonden
+error.messageNotFound = Bericht is niet gevonden
+error.costNotFound = Kost is niet gevonden
+error.stopNotFound = Stopplaats is niet gevonden
+error.userNotAuthorizedToEditTrip = Je bent niet gemachtigd om deze triptemplate aan te passen //You are not authorized to edit this trip
+error.userNotAuthorizedToAddRequirement = Je bent niet gemachtigd om een benodigdheid aan deze trip toe te voegen
+error.userNotAuthorizedToAddMessages = Je bent niet gemachtigd om een berichten aan deze trip toe te voegen
