--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -148,7 +148,8 @@ text.mail = ANTICRASHTEXT.MAIL-ALS JE DIT ZIET MOET JE DE TEXT.MAIL IN DEZE PAGI
 
 trips.repeatabletooltip = Is je trip herhaalbaar op een vast interval?
 
-error.defaultError = DANGER DANGER HIGH VOLTAGE
+error.defaultError = Onbekende fout
+#TODO: defaultError!
 error.tripNotFound = Triptemplate is niet gevonden
 error.tripInstanceNotFound = Geplande trip is niet gevonden
 error.messageNotFound = Bericht is niet gevonden
