TODO's + Exception Handling

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -156,5 +156,6 @@ error.messageNotFound = Bericht is niet gevonden
 error.costNotFound = Kost is niet gevonden
 error.stopNotFound = Stopplaats is niet gevonden
 error.userNotAuthorizedToEditTrip = Je bent niet gemachtigd om deze triptemplate aan te passen //You are not authorized to edit this trip
+error.userNotAuthorizedToEditStop = Je bent niet gemachtigd om deze stop aan te passen
 error.userNotAuthorizedToAddRequirement = Je bent niet gemachtigd om een benodigdheid aan deze trip toe te voegen
 error.userNotAuthorizedToAddMessages = Je bent niet gemachtigd om een berichten aan deze trip toe te voegen
