--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -156,6 +156,8 @@ error.messageNotFound = Bericht is niet gevonden
 error.costNotFound = Kost is niet gevonden
 error.stopNotFound = Stopplaats is niet gevonden
 error.userNotAuthorizedToEditTrip = Je bent niet gemachtigd om deze triptemplate aan te passen //You are not authorized to edit this trip
-error.userNotAuthorizedToEditStop = Je bent niet gemachtigd om deze stop aan te passen
+error.userNotAuthorizedToAddStop = Je bent niet gemachtigd om een stop aan te maken bij deze triptemplate
+error.userNotAuthorizedToEditStop = Je bent niet gemachtigd om deze stop aan te passen bij deze triptemplate
 error.userNotAuthorizedToAddRequirement = Je bent niet gemachtigd om een benodigdheid aan deze trip toe te voegen
 error.userNotAuthorizedToAddMessages = Je bent niet gemachtigd om een berichten aan deze trip toe te voegen
+error.userNotAuthorizedToAddAnswers = Je bent niet gemachtigd om een antwoord aan deze stop toe te voegen
