Aanpassingen filler, web.xml, nl_properties

--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -50,7 +50,6 @@ text.notripinstancesfound = De trip heeft nog geen instanties.
 text.notripsfound = Geen trips gevonden
 text.order = Volgorde
 text.participants = Deelnemers
-text.pagenotfound = De gevraagde pagina bestaat helaas niet. Controleer de url aub.
 text.password = Wachtwoord
 text.profilepicture = Link naar profielfoto
 text.register = Registreer
@@ -91,7 +90,6 @@ text.type = Type
 text.username = Gebruikersnaam
 text.viewprofile = Bekijk profiel
 text.viewtripinformation = Trip-info bekijken
-
 text.publictrips = Publieke templates
 text.noowntripsfound = Je hebt nog geen eigen templates gemaakt
 text.owntrips = Eigen templates
@@ -148,7 +146,7 @@ text.mail = ANTICRASHTEXT.MAIL-ALS JE DIT ZIET MOET JE DE TEXT.MAIL IN DEZE PAGI
 
 trips.repeatabletooltip = Is je trip herhaalbaar op een vast interval?
 
-error.defaultError = Onbekende fout
+error.defaultError = Er is een onbekende fout opgetreden. Gelieve de webmaster te contacteren.
 #TODO: defaultError!
 error.tripNotFound = Triptemplate is niet gevonden
 error.tripInstanceNotFound = Geplande trip is niet gevonden
@@ -161,3 +159,7 @@ error.userNotAuthorizedToEditStop = Je bent niet gemachtigd om deze stop aan te 
 error.userNotAuthorizedToAddRequirement = Je bent niet gemachtigd om een benodigdheid aan deze trip toe te voegen
 error.userNotAuthorizedToAddMessages = Je bent niet gemachtigd om een berichten aan deze trip toe te voegen
 error.userNotAuthorizedToAddAnswers = Je bent niet gemachtigd om een antwoord aan deze stop toe te voegen
+
+error.requestmethoderror = Er is een fout gebeurd tijdens de aanvraag. Contacteer een web admin.
+error.pagenotfound = De gevraagde pagina bestaat helaas niet. Controleer de url aub.
+error.internalsystemerror= De pagina kon niet weergegeven worden door een misconfiguratie aan onze kant. We lossen het zo snel mogelijk op!
