--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -1,165 +1,162 @@
+#text.editstop = Stopplaats aanpassen
+#text.enddate = Enddate
+#text.from = Van
+#text.startdate = Startdatum
+#text.to = Tot
+#trip.add = Voeg een nieuwe trip toe
+#tripinstance.tripinstance =
+answer.noaswersfound = Er zijn nog geen antwoorden voor de stopvraag
+answer.question = Vraagstelling
+cost.add = Kost toevoegen
+cost.amount = Bedrag
+cost.costs = Kosten
+cost.delete = Kost verwijderen
+cost.description = Beschrijving van de kost
+cost.edit = Kost aanpassen
+cost.nocostsfound = Geen kosten toegevoegd
+error.costNotFound = Kost is niet gevonden
+error.defaultError = Er is een onbekende fout opgetreden. Gelieve de webmaster te contacteren.
+error.error= Wel, dit is gen\u00e2nt...
+error.internalsystemerror= De pagina kon niet weergegeven worden door een misconfiguratie aan onze kant. We lossen het zo snel mogelijk op!
+error.messageNotFound = Bericht is niet gevonden
+error.pagenotfound = De gevraagde pagina bestaat helaas niet. Controleer de url aub.
+error.requestmethoderror = Er is een fout gebeurd tijdens de aanvraag. Contacteer een web admin.
+error.sorry = Het spijt ons, maar we konden jouw aanvraag niet verwerken. De foutboodschap is als volgt:
+error.stopNotFound = Stopplaats is niet gevonden
+error.tripInstanceNotFound = Geplande trip is niet gevonden
+error.tripNotFound = Triptemplate is niet gevonden
+error.userNotAuthorizedToAddAnswers = Je bent niet gemachtigd om een antwoord aan deze stop toe te voegen
+error.userNotAuthorizedToAddMessages = Je bent niet gemachtigd om een berichten aan deze trip toe te voegen
+error.userNotAuthorizedToAddRequirement = Je bent niet gemachtigd om een benodigdheid aan deze trip toe te voegen
+error.userNotAuthorizedToAddStop = Je bent niet gemachtigd om een stop aan te maken bij deze triptemplate
+error.userNotAuthorizedToEditStop = Je bent niet gemachtigd om deze stop aan te passen bij deze triptemplate
+error.userNotAuthorizedToEditTrip = Je bent niet gemachtigd om deze triptemplate aan te passen //You are not authorized to edit this trip
+home.contentTitle = Mijn Trippie Adviseur
+home.organizeTrip = Organizeer een trip
+home.participateOnTrip = Deelnamen aan een Trip
+invite.bymail = Nodig vrienden uit via e-mail
+invite.doinvite = Uitnodigen
+invite.invitefriendsfb = Nodig vrienden uit via Facebook
+invite.personalmessage = Persoonlijk bericht
+invite.receipients = Ontvangers (gescheiden door een komma)
+login.loading = Laden
+login.loginfacebook = Login met Facebook
+menu.home = Home
+menu.logout = LogOut
+menu.organisetrips = Organiseer Trips
+menu.profile = Profiel
+menu.trips = Trips
+message.add = Plaats een bericht
+message.content = Schrijf hier je bericht
+message.date = Datum van het bericht
+message.delete= Bericht verwijderen
+message.messages = Berichten
+message.nomessagesfound = Geen berichten geplaatst
+requirement.allusers = Iedereen
+requirement.amount = Hoeveel je van deze benodigdheid nodig hebt voor de trip
+requirement.create = Maak een nieuwe benodigdheid aan
+requirement.description = Een korte beschrijving van de benodigdheid.
+requirement.name = Naam van de benodigdheid
+requirement.norequirementsfound = De trip heeft geen benodigdheden.
+requirement.requirements = Benodigdheden
+requirementinstance.assignresponsible = Benodigdheid toewijzen aan een deelnemer
+requirementinstance.responsible = Verantwoordelijk
+stop.add = Voeg een nieuwe stop toe
+stop.augmentedreality = Augmented Reality
+stop.informative = Informatief
+stop.interactive = Interactief
+stop.latitude = Latitude
+stop.longitude = Longitude
+stop.new = Stopplaats toevoegen
+stop.normal = Normaal
+stop.nostopsfound = Geen stopplaatsen beschikbaar
+stop.order = Volgorde
+stop.radius = Straal
+stop.type = Type
+stop.visibility = Zichtbaarheid van de stopplaatsen instellen.
+stops.editstop = Stopplaats aanpassen
+stops.latitude = Latitude
+stops.longitude = Longitude
+stops.question = Vraagstelling
+stops.radius = Straal
+stops.visibility = Zichtbaarheid van de stopplaatsen instellen.
 text.add = Toevoegen
-text.addstop = Voeg een nieuwe stop toe
-text.addtrip = Voeg een nieuwe trip toe
 text.amount = Aantal
-text.ar = Augmented Reality
-text.available = Publiek
-text.availabletooltip = Enkel op uitnodiging.
 text.cancel = Annuleren
 text.createaccount = Maak een nieuwe account
-text.createRequirement = Maak een nieuwe benodigdheid aan 
-text.createtrip = Maak een trip aan
-text.costs = Kosten
+text.dashboard = Mijn dashboard
 text.date = Datum
 text.dateofbirth = Geboortedatum
 text.dateofbirthedit = Geboortedatum (dd-mm-jjjj)
+text.delete = Verwijderen
 text.description = Omschrijving
-text.descriptiontooltip = Korte omschrijving van de trip.
 text.detail = detail
 text.edit = Aanpassen
-#text.editstop = Stopplaats aanpassen
-text.edittrip = Trip aanpassen
-#text.enddate = Enddate
-text.endtime = Eindtijd
-text.error= Wel, dit is gen\u00e2nt...
+text.email = E-mailadres
 text.finishediting = Klaar met toevoegen
-text.informative = Informatief
-text.instancedate = Op welke dag vindt de trip plaats?
-text.instanceendtime = Wanneer eindigt de trip?
-text.instances = Instances
-text.instancestarttime = Wanneer start de trip?
-text.interactive = Interactief
 text.internalsystemerror= De pagina kon niet weergegeven worden door een misconfiguratie aan onze kant. We lossen het zo snel mogelijk op!
 text.invaliduser = Deze gebruiker kan niet worden teruggevonden in het systeem.
-text.jointrip = Deelnemen
-text.latitude = Latitude
 text.login = Aanmelden
-text.longitude = Longitude
-text.email = E-mailadres
-text.messages = Berichten
+text.logout = Uitloggen
+text.mydata = Mijn gegevens
 text.myprofile = Mijn profiel
+text.mytrips = Mijn trips
 text.name = Naam
-text.newstop = Stopplaats toevoegen
-text.norequirementsfound = De trip heeft geen benodigdheden.
-text.normal = Normaal
-text.nocostsfound = Geen kosten toegevoegd
-text.nomessagesfound = Geen berichten geplaatst
-text.noparticipants = Geen deelnemers
-text.nostopsfound = Geen stopplaatsen beschikbaar
-text.notripinstancesfound = De trip heeft nog geen instanties.
-text.notripsfound = Geen trips gevonden
-text.order = Volgorde
-text.participants = Deelnemers
 text.password = Wachtwoord
 text.profilepicture = Link naar profielfoto
 text.register = Registreer
 text.rending = Weergave
-text.repeatabletrip = Kan je trip meerdere keren uitgevoerd worden?
 text.repeatpassword = Wachtwoord herhalen
-text.requirementinstanceforallusers = Iedereen
-text.requirementinstancebrings = Verantwoordelijk
-text.requirementamount = Hoeveel je van deze benodigdheid nodig hebt voor de trip
-text.requirementdescription = Een korte beschrijving van de benodigdheid.
-text.requirementname = Naam van de benodigdheid
-text.requirements = Benodigdheden
 text.resetpassword = Reset paswoord
 text.resetpasswordlink= Wachtwoord vergeten?
 text.resetpasswordtimeerror = Tijd om het paswoord te resetten is overschreden. Gelieve dit opnieuw aan te vragen.
 text.resetstringnotfound = Deze resetlink is ongeldig.
 text.save = Opslaan
-text.sorry = Het spijt ons, maar we konden jouw aanvraag niet verwerken. De foutboodschap is als volgt:
-text.startdate = Startdatum
-text.starttime = Starttijd
 text.stops = Stops
+text.time = Tijd
 text.title = Titel
-text.titletooltip = Naam van de trip.
-text.trip= Trip
-text.tripdescription = Beschrijving van de trip
-text.tripenddate = Einddatum van de trip
-text.tripinstance = Trip-instantie plannen
-text.tripinstances = Geplande trips
-text.tripname = Naam van de trip
-text.tripnumberofparticipants = Aantal deelnemers
-text.trips = Trips
-text.tripsparticipated = Uitgevoerde en geplande trips
-text.tripstartdate = Startdatum van de trip
-text.tripinstancedate = Dag van de trip
-text.tripinstancestarttime = Startuur
-text.tripinstanceendtime = Einduur
-text.type = Type
 text.username = Gebruikersnaam
 text.viewprofile = Bekijk profiel
-text.viewtripinformation = Trip-info bekijken
-text.publictrips = Publieke templates
-text.noowntripsfound = Je hebt nog geen eigen templates gemaakt
-text.owntrips = Eigen templates
-text.tripcreator = Deze trip werd gemaakt door
-text.triporganiser = Organisator
-text.editinstance = Pas deze geplande trip aan
-text.addmessage = Plaats een bericht
-text.messagecontent = Schrijf hier je bericht
-text.messagedate = Datum van het bericht
-text.from = Van
-text.to = Tot
-text.time = Tijd
-text.daily = Every day
-text.weekly = Every week
-text.dateuntil = Herhalen tot datum
-text.dateuntiltooltip = Tot welke datum wil je deze trip herhalen?
-text.owntripinstances = Eigen trips
-text.publictripinstances = Publieke trips
-text.noaswersfound = Er zijn nog geen antwoorden voor de stopvraag
-text.assignrequirementtoparticipant = Benodigdheid toewijzen aan een deelnemer
-text.deletemessage = Verwijderen
-text.deletecost = Verwijderen
-text.editcost = Aanpassen
-text.addcost = Kost toevoegen
-text.costdescription = Beschrijving
-text.costamount = Bedrag
-text.invitefriendsfb = Nodig vrienden uit via Facebook
-text.question = Vraagstelling
-text.plannedtrips = Geplande trips
-text.pasttrips = Voorbije trips
-text.visibility = Zichtbaarheid van de stopplaatsen instellen.
-text.radius = Straal
-text.dashboard = Mijn dashboard
-text.mydata = Mijn gegevens
-text.mytrips = Mijn trips
-invite.bymail = Nodig vrienden uit via e-mail
-invite.receipients = Ontvangers (gescheiden door een komma)
-invite.doinvite = Uitnodigen
-invite.personalmessage = Persoonlijk bericht
-text.logout = Uitloggen
-
-stops.question = Vraagstelling
-stops.visibility = Zichtbaarheid van de stopplaatsen instellen.
-stops.radius = Straal
-stops.latitude = Latitude
-stops.longitude = Longitude
-stops.editstop = Stopplaats aanpassen
-
-home.participateOnTrip = Deelnamen aan een Trip
-home.organizeTrip = Organizeer een trip
-home.contentTitle = Mijn Trippie Adviseur
-
-text.mail = ANTICRASHTEXT.MAIL-ALS JE DIT ZIET MOET JE DE TEXT.MAIL IN DEZE PAGINA AANPASSEN NAAR TEXT.EMAIL
-
-trips.repeatabletooltip = Is je trip herhaalbaar op een vast interval?
-
-error.defaultError = Er is een onbekende fout opgetreden. Gelieve de webmaster te contacteren.
-#TODO: defaultError!
-error.tripNotFound = Triptemplate is niet gevonden
-error.tripInstanceNotFound = Geplande trip is niet gevonden
-error.messageNotFound = Bericht is niet gevonden
-error.costNotFound = Kost is niet gevonden
-error.stopNotFound = Stopplaats is niet gevonden
-error.userNotAuthorizedToEditTrip = Je bent niet gemachtigd om deze triptemplate aan te passen //You are not authorized to edit this trip
-error.userNotAuthorizedToAddStop = Je bent niet gemachtigd om een stop aan te maken bij deze triptemplate
-error.userNotAuthorizedToEditStop = Je bent niet gemachtigd om deze stop aan te passen bij deze triptemplate
-error.userNotAuthorizedToAddRequirement = Je bent niet gemachtigd om een benodigdheid aan deze trip toe te voegen
-error.userNotAuthorizedToAddMessages = Je bent niet gemachtigd om een berichten aan deze trip toe te voegen
-error.userNotAuthorizedToAddAnswers = Je bent niet gemachtigd om een antwoord aan deze stop toe te voegen
-
-error.requestmethoderror = Er is een fout gebeurd tijdens de aanvraag. Contacteer een web admin.
-error.pagenotfound = De gevraagde pagina bestaat helaas niet. Controleer de url aub.
-error.internalsystemerror= De pagina kon niet weergegeven worden door een misconfiguratie aan onze kant. We lossen het zo snel mogelijk op!
+trip.available = Publiek
+trip.availabletooltip = Enkel op uitnodiging.
+trip.create = Maak een trip aan
+trip.creator = Deze trip werd gemaakt door
+trip.description = Beschrijving van de trip
+trip.descriptiontooltip = Korte omschrijving van de trip.
+trip.edit = Trip aanpassen
+trip.name = Naam van de trip
+trip.noowntripsfound = Je hebt nog geen eigen templates gemaakt
+trip.notripsfound = Geen trips gevonden
+trip.owntrips = Eigen templates
+trip.publictrips = Publieke templates
+trip.repeatable = Herhaalbaar
+trip.repeatabletooltip = Kan je trip meerdere keren uitgevoerd worden?
+trip.titletooltip = Naam van de trip.
+trip.trip= Trip
+trip.trips = Trips
+trip.viewinformation = Trip-info bekijken
+tripinstance.create = Trip-instantie plannen
+tripinstance.daily = Dagelijks
+tripinstance.date = Dag van de trip
+tripinstance.datetooltip = Op welke dag vindt de trip plaats?
+tripinstance.dateuntil = Herhalen tot datum
+tripinstance.dateuntiltooltip = Tot welke datum wil je deze trip herhalen?
+tripinstance.edit = Pas deze geplande trip aan
+tripinstance.endtime = Einduur
+tripinstance.endtimetooltip = Wanneer eindigt de trip?
+tripinstance.join = Deelnemen
+tripinstance.noparticipants = Geen deelnemers
+tripinstance.notripinstancesfound = De trip heeft nog geen instanties.
+tripinstance.numberofparticipants = Aantal deelnemers
+tripinstance.organiser = Organisator
+tripinstance.owntripinstances = Eigen trips
+tripinstance.participants = Deelnemers
+tripinstance.participated = Deelgenomen trips
+tripinstance.pasttrips = Voorbije trips
+tripinstance.plannedtrips = Geplande trips
+tripinstance.publictripinstances = Publieke trips
+tripinstance.starttime = Startuur
+tripinstance.starttimetooltip = Wanneer start de trip?
+tripinstance.tripinstances = Geplande trips
+tripinstance.tripinstancesofthistrip = Geplande trips van deze template
+tripinstance.weekly = Wekelijks
