--- a/TrippieApp/res/values/strings.xml
+++ b/TrippieApp/res/values/strings.xml
@@ -6,9 +6,12 @@
     <string name="start">Start Trip</string>
     <string name="chat">Chat</string>
     <string name="maps">Nearby Trips</string>
-    <string name="name">Name</string>
+    <string name="fName">Name</string>
     <string name="date">Date</string>
     <string name="startTime">Start Date</string>
     <string name="endTime">End Date</string>
     <string name="description">Description</string>
+    <string name="send">Send</string>
+    <string name="select_trip">Select Trip</string>
+    <string name="select_coparticipant">Select Co-Participant</string>
 </resources>
